  any `open` statement.
  (Florian Angeletti, review by David Allsopp and report by Daniel Bünzli)

- MPR#7521, GPR#1159: ocamldoc, end generated latex file with a new line
  (Florian Angeletti)

- MPR#7610, GPR#1346: caml.el (the Emacs editing mode) was cleaned up
  and made compatible with Emacs 25.
  (Stefan Monnier, Christophe Troestler)

- GPR#681: Introduce ocamltest, a new test driver for the
  OCaml compiler testsuite
  (Sébastien Hinderer, review by Damien Doligez)

- GPR#1045: ocamldep, add a "-shared" option to generate dependencies
  for native plugin files (i.e. .cmxs files)
  (Florian Angeletti, suggestion by Sébastien Hinderer)

- GPR#1078: add a subcommand "-depend" to "ocamlc" and "ocamlopt",
  to behave as ocamldep. Should be used mostly to replace "ocamldep" in the
  "boot" directory to reduce its size in the future.
  (Fabrice Le Fessant)

- GPR#1012: ocamlyacc, fix parsing of raw strings and nested comments, as well
  as the handling of ' characters in identifiers.
  (Demi Obenour)

- GPR#1036: ocamlcmt (tools/read_cmt) is installed, converts .cmt to .annot
  (Fabrice Le Fessant)

- GPR#1180: Add support for recording numbers of direct and indirect
  calls over the lifetime of a program when using Spacetime profiling
  (Mark Shinwell)

### Toplevel:

- MPR#7570: remove unusable -plugin option from the toplevel
  (Florian Angeletti)

- GPR#1041: -nostdlib no longer ignored by toplevel.
  (David Allsopp, review by Xavier Leroy)

### Runtime system:

* MPR#3771, GPR#153, GPR#1200, GPR#1357, GPR#1362, GPR#1363: Unicode support for
  the Windows runtime.
  (ygrek, Clement Franchini, Nicolas Ojeda Bar, review by Alain Frisch, David
  Allsopp, Damien Doligez)

- GPR#1070, GPR#1295: enable gcc typechecking for caml_alloc_sprintf,
  caml_gc_message. Make caml_gc_message a variadic function. Fix many
  caml_gc_message format strings.
  (Olivier Andrieu, review and 32bit fix by David Allsopp)
