@@ -325,6 +325,10 @@ Release branch for 4.06:
   and made compatible with Emacs 25.
   (Stefan Monnier, Christophe Troestler)
 
+- MPR#7635, GPR#1383: ocamldoc, add an identifier to module
+  and module type elements
+  (Florian Angeletti, review by Yawar Amin and Gabriel Scherer)
+
 - GPR#681: Introduce ocamltest, a new test driver for the
   OCaml compiler testsuite
   (Sébastien Hinderer, review by Damien Doligez)
